[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/juego.gd" type="Script" id=1]
[ext_resource path="res://Scenes/RigidBody2D.tscn" type="PackedScene" id=2]

[node name="juego" type="Node2D"]
script = ExtResource( 1 )
frutas = ExtResource( 2 )

[node name="fruta_spawner" type="Timer" parent="."]

[node name="spawn_point" type="Position2D" parent="."]
position = Vector2( -33.7176, 379.945 )

[connection signal="timeout" from="fruta_spawner" to="." method="_on_fruta_spawner_timeout"]
